# dev-log-cli

./: .gitignore  README.md  pyproject.toml
devlog/: cli.py
